<resources>
    <string name="app_name">MusicPlayer</string>
    <string name="default_user_name">不约儿童</string>
    <string name="start_page_text">欢迎来到\n我们的歌</string>
    <string name="user_avatar_desc">用户头像</string>
    <string name="go_ahead_desc">前进</string>
    <string name="start_page_desc_text">音乐拥有无限能量</string>
    <string name="start_page_button_text">开启音乐之旅</string>
    <string name="my_favorite_list_icon">我喜欢的音乐</string>
    <string name="my_favorite_list_title_text">我喜欢的音乐</string>
    <string name="music_list_count_text">233首</string>
    <string name="btn_play_all_text">播放全部</string>
    <string name="created_music_list_hint">创建歌单</string>
    <string name="created_music_list_desc">创建歌单</string>
    <string name="create_music_list_text">+</string>
    <string name="music_list_icon">音乐列表</string>
    <string name="music_list_hint">音乐列表</string>
    <string name="tab_bar_button_main_page_desc">主页</string>
    <string name="tab_bar_text_main_page_text">列表</string>
    <string name="tab_bar_text_search_text">搜索</string>
    <string name="tab_bar_button_search_desc">搜索</string>
    <string name="tab_bar_text_mine_text">我的</string>
    <string name="tab_bar_button_mine_desc">我的</string>
    <string name="music_list_label">歌单</string>
    <string name="music_list_page_play_all_text_content">播放全部</string>
    <string name="music_list_page_count_text">(共233首)</string>
    <string name="music_item_number_hint">1</string>
    <string name="music_item_name_hint">晴天</string>
    <string name="music_item_desc_hint">周杰伦-叶惠美</string>
    <string name="music_item_desc_template">%s-%s</string>
    <string name="play_music_name_text_hint">稻香</string>
    <string name="play_music_image_description">播放中的音乐</string>
    <string name="btn_cycle_method">循环方式</string>
    <string name="btn_previous">上一曲</string>
    <string name="btn_play">播放</string>
    <string name="btn_next">下一曲</string>
    <string name="btn_list">播放列表</string>
</resources>