<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/tab_bar_height"
    android:background="@color/colorMainPageBackground">

    <ImageButton
        android:id="@+id/tab_bar_button_main_page"
        android:layout_width="@dimen/tab_bar_button_size"
        android:layout_height="@dimen/tab_bar_button_size"
        android:layout_marginTop="@dimen/tab_bar_margin_top"
        android:background="@color/colorMainPageBackground"
        android:contentDescription="@string/tab_bar_button_main_page_desc"
        android:scaleType="centerInside"
        android:src="@drawable/ic_music_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tab_bar_text_main_page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tab_bar_text_main_page_text"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/tab_bar_text_size"
        app:layout_constraintEnd_toEndOf="@+id/tab_bar_button_main_page"
        app:layout_constraintStart_toStartOf="@+id/tab_bar_button_main_page"
        app:layout_constraintTop_toBottomOf="@+id/tab_bar_button_main_page" />

    <ImageButton
        android:id="@+id/tab_bar_button_search"
        android:layout_width="@dimen/tab_bar_button_size"
        android:layout_height="@dimen/tab_bar_button_size"
        android:layout_marginTop="@dimen/tab_bar_margin_top"
        android:background="@color/colorMainPageBackground"
        android:contentDescription="@string/tab_bar_button_search_desc"
        android:padding="@dimen/tab_bar_button_search_padding"
        android:scaleType="centerInside"
        android:src="@drawable/ic_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tab_bar_text_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tab_bar_text_search_text"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/tab_bar_text_size"
        app:layout_constraintEnd_toEndOf="@+id/tab_bar_button_search"
        app:layout_constraintStart_toStartOf="@+id/tab_bar_button_search"
        app:layout_constraintTop_toBottomOf="@+id/tab_bar_button_search" />

    <ImageButton
        android:id="@+id/tab_bar_button_mine"
        android:layout_width="@dimen/tab_bar_button_size"
        android:layout_height="@dimen/tab_bar_button_size"
        android:layout_marginTop="@dimen/tab_bar_margin_top"
        android:background="@color/colorMainPageBackground"
        android:contentDescription="@string/tab_bar_button_mine_desc"
        android:scaleType="centerInside"
        android:src="@drawable/ic_user_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tab_bar_text_mine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tab_bar_text_mine_text"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/tab_bar_text_size"
        app:layout_constraintEnd_toEndOf="@+id/tab_bar_button_mine"
        app:layout_constraintStart_toStartOf="@+id/tab_bar_button_mine"
        app:layout_constraintTop_toBottomOf="@+id/tab_bar_button_mine" />

</androidx.constraintlayout.widget.ConstraintLayout>