<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/music_item_height"
    android:background="@color/colorWhite">

    <TextView
        android:id="@+id/music_item_number_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/music_item_margin_start"
        android:hint="@string/music_item_number_hint"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/music_item_number_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/music_item_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/music_item_name_margin_start"
        android:layout_marginTop="@dimen/music_item_margin_top"
        android:hint="@string/music_item_name_hint"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/music_item_name_text_size"
        app:layout_constraintStart_toEndOf="@+id/music_item_number_text"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/music_item_desc_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/music_item_desc_text_margin_top"
        android:layout_marginBottom="@dimen/music_item_desc_text_margin_bottom"
        android:hint="@string/music_item_desc_hint"
        android:textColor="@color/colorBlack"
        app:layout_constraintStart_toStartOf="@+id/music_item_name_text"
        app:layout_constraintTop_toBottomOf="@+id/music_item_name_text" />

</androidx.constraintlayout.widget.ConstraintLayout>