<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorMainPageBackground">

    <TextView
        android:id="@+id/play_music_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/play_music_name_text_hint"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/play_music_name_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15" />

    <ImageView
        android:id="@+id/play_music_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/play_music_image_background"
        android:contentDescription="@string/play_music_image_description"
        android:padding="@dimen/play_music_image_padding"
        android:src="@mipmap/ic_capricorn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45" />

    <ProgressBar
        android:id="@+id/play_progress"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/play_progress_margin_start_and_end"
        android:layout_marginTop="@dimen/play_progress_margin_top"
        android:layout_marginEnd="@dimen/play_progress_margin_start_and_end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/play_music_image" />

    <ImageButton
        android:id="@+id/btn_cycle_method_image"
        android:layout_width="@dimen/cycle_method_image_size"
        android:layout_height="@dimen/cycle_method_image_size"
        android:layout_marginTop="@dimen/cycle_method_image_margin_top"
        android:background="@color/colorMainPageBackground"
        android:contentDescription="@string/btn_cycle_method"
        android:scaleType="centerInside"
        android:src="@drawable/ic_list_cycle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/play_progress" />

    <ImageButton
        android:id="@+id/btn_previous"
        android:layout_width="@dimen/play_control_image_size"
        android:layout_height="@dimen/play_control_image_size"
        android:layout_marginTop="@dimen/control_button_margin_top"
        android:background="@color/colorMainPageBackground"
        android:contentDescription="@string/btn_previous"
        android:scaleType="centerInside"
        android:src="@mipmap/ic_previous"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/play_progress" />

    <ImageButton
        android:id="@+id/btn_play"
        android:layout_width="@dimen/play_control_image_size"
        android:layout_height="@dimen/play_control_image_size"
        android:layout_marginTop="@dimen/control_button_margin_top"
        android:background="@color/colorMainPageBackground"
        android:contentDescription="@string/btn_play"
        android:scaleType="centerInside"
        android:src="@drawable/ic_play"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/play_progress" />

    <ImageButton
        android:id="@+id/btn_next"
        android:layout_width="@dimen/play_control_image_size"
        android:layout_height="@dimen/play_control_image_size"
        android:layout_marginTop="@dimen/control_button_margin_top"
        android:background="@color/colorMainPageBackground"
        android:contentDescription="@string/btn_next"
        android:scaleType="centerInside"
        android:src="@mipmap/ic_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/play_progress" />

    <ImageButton
        android:id="@+id/btn_play_list"
        android:layout_width="@dimen/play_control_image_size"
        android:layout_height="@dimen/play_control_image_size"
        android:layout_marginTop="@dimen/control_button_margin_top"
        android:background="@color/colorMainPageBackground"
        android:contentDescription="@string/btn_list"
        android:scaleType="centerInside"
        android:src="@drawable/ic_play_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/play_progress" />

    <ImageButton
        android:id="@+id/btn_collect"
        android:layout_width="@dimen/btn_collect_size"
        android:layout_height="@dimen/btn_collect_size"
        android:layout_marginTop="@dimen/control_button_margin_top"
        android:background="@color/colorMainPageBackground"
        android:contentDescription="@string/btn_list"
        android:scaleType="centerInside"
        android:src="@drawable/ic_collect"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_play" />

</androidx.constraintlayout.widget.ConstraintLayout>