<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorMainPageBackground">

    <LinearLayout
        android:id="@+id/main_page_header_container"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/main_page_top_height"
        android:layout_marginBottom="@dimen/main_page_header_margin_bottom"
        android:orientation="horizontal"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="@dimen/main_page_header_image_size"
            android:layout_height="@dimen/main_page_header_image_size"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="@dimen/main_page_header_image_margin_end"
            android:contentDescription="@string/user_avatar_desc"
            android:src="@drawable/ic_user" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:hint="@string/default_user_name"
            android:textColorHint="@color/colorUserNameHint"
            android:textSize="@dimen/main_page_header_user_name_size"
            android:textStyle="bold" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/tab_bar_container"
        android:layout_width="match_parent"
        android:layout_height="@dimen/tab_bar_height"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/tab_bar_button_main_page"
            android:layout_width="@dimen/tab_bar_button_size"
            android:layout_height="@dimen/tab_bar_button_size"
            android:layout_marginTop="@dimen/tab_bar_margin_top"
            android:contentDescription="@string/tab_bar_button_main_page_desc"
            android:src="@drawable/ic_music_list"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tab_bar_text_main_page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_bar_text_main_page_text"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/tab_bar_text_size"
            app:layout_constraintEnd_toEndOf="@+id/tab_bar_button_main_page"
            app:layout_constraintStart_toStartOf="@+id/tab_bar_button_main_page"
            app:layout_constraintTop_toBottomOf="@+id/tab_bar_button_main_page" />

        <ImageView
            android:id="@+id/tab_bar_button_search"
            android:layout_width="@dimen/tab_bar_button_size"
            android:layout_height="@dimen/tab_bar_button_size"
            android:layout_marginTop="@dimen/tab_bar_margin_top"
            android:contentDescription="@string/tab_bar_button_search_desc"
            android:padding="@dimen/tab_bar_button_search_padding"
            android:src="@drawable/ic_search"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tab_bar_text_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_bar_text_search_text"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/tab_bar_text_size"
            app:layout_constraintEnd_toEndOf="@+id/tab_bar_button_search"
            app:layout_constraintStart_toStartOf="@+id/tab_bar_button_search"
            app:layout_constraintTop_toBottomOf="@+id/tab_bar_button_search" />

        <ImageView
            android:id="@+id/tab_bar_button_mine"
            android:layout_width="@dimen/tab_bar_button_size"
            android:layout_height="@dimen/tab_bar_button_size"
            android:layout_marginTop="@dimen/tab_bar_margin_top"
            android:contentDescription="@string/tab_bar_button_mine_desc"
            android:src="@drawable/ic_user_bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tab_bar_text_mine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_bar_text_mine_text"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/tab_bar_text_size"
            app:layout_constraintEnd_toEndOf="@+id/tab_bar_button_mine"
            app:layout_constraintStart_toStartOf="@+id/tab_bar_button_mine"
            app:layout_constraintTop_toBottomOf="@+id/tab_bar_button_mine" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:id="@+id/main_page_scroll"
        android:layout_width="match_parent"
        android:layout_height="572dp"
        app:layout_constraintBottom_toTopOf="@+id/tab_bar_container"
        app:layout_constraintTop_toBottomOf="@+id/main_page_header_container">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/main_page_user_info_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/main_page_user_info_top_margin"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="@dimen/main_page_user_avatar_width"
                    android:layout_height="@dimen/main_page_user_avatar_height"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/main_page_user_avatar_start_margin"
                    android:contentDescription="@string/user_avatar_desc"
                    android:src="@drawable/ic_user" />

                <TextView
                    android:layout_width="@dimen/main_page_user_name_text_width"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/main_page_user_name_start_margin"
                    android:hint="@string/default_user_name"
                    android:textColorHint="@color/colorUserNameHint"
                    android:textSize="@dimen/main_page_user_name_text_size"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="@dimen/go_ahead_width"
                    android:layout_height="@dimen/go_ahead_height"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/main_page_go_ahead_start_margin"
                    android:contentDescription="@string/go_ahead_desc"
                    android:src="@drawable/ic_go_ahead" />
            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/my_favorite_music_list_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/main_page_music_list_margin_start_and_end"
                android:layout_marginTop="@dimen/music_my_favorite_top_margin"
                android:layout_marginEnd="@dimen/main_page_music_list_margin_start_and_end"
                android:background="@drawable/my_favorite_music_list_shape"
                app:layout_constraintTop_toBottomOf="@+id/main_page_user_info_container">

                <ImageView
                    android:id="@+id/main_page_my_favorite_music_list_icon"
                    android:layout_width="@dimen/main_page_my_favorite_music_list_icon_size"
                    android:layout_height="@dimen/main_page_my_favorite_music_list_icon_size"
                    android:layout_marginStart="@dimen/main_page_my_favorite_music_list_icon_start_margin"
                    android:layout_marginTop="@dimen/main_page_my_favorite_music_list_icon_top_bottom_margin"
                    android:layout_marginBottom="@dimen/main_page_my_favorite_music_list_icon_top_bottom_margin"
                    android:background="@drawable/my_favorite_icon_shape"
                    android:contentDescription="@string/my_favorite_list_icon"
                    android:padding="@dimen/my_favorite_icon_padding"
                    android:src="@drawable/ic_favorite"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/my_favorite_music_list_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/my_favorite_music_list_title_start_margin"
                    android:layout_marginTop="@dimen/my_favorite_music_list_title_top_margin"
                    android:text="@string/my_favorite_list_title_text"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/music_list_title_text_size"
                    app:layout_constraintStart_toEndOf="@+id/main_page_my_favorite_music_list_icon"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/my_favorite_music_list_music_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/my_favorite_music_list_music_count_top_margin"
                    android:hint="@string/music_list_count_text"
                    android:textColor="@color/colorGray"
                    android:textSize="@dimen/music_list_count_text_size"
                    app:layout_constraintStart_toStartOf="@+id/my_favorite_music_list_title"
                    app:layout_constraintTop_toBottomOf="@+id/my_favorite_music_list_title" />

                <Button
                    android:id="@+id/btn_play_all_my_favorite"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/btn_play_all_height"
                    android:layout_marginEnd="@dimen/btn_play_all_end_margin"
                    android:background="@drawable/btn_play_all_shape"
                    android:paddingStart="@dimen/main_page_btn_start_end_padding"
                    android:paddingTop="@dimen/main_page_btn_top_bottom_padding"
                    android:paddingEnd="@dimen/main_page_btn_start_end_padding"
                    android:paddingBottom="@dimen/main_page_btn_top_bottom_padding"
                    android:text="@string/btn_play_all_text"
                    android:textColor="@color/colorGray"
                    android:textSize="@dimen/main_page_btn_text_size"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/create_music_list_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/main_page_music_list_margin_start_and_end"
                android:layout_marginTop="@dimen/music_my_favorite_top_margin"
                android:layout_marginEnd="@dimen/main_page_music_list_margin_start_and_end"
                android:background="@drawable/my_favorite_music_list_shape"
                app:layout_constraintTop_toBottomOf="@+id/my_favorite_music_list_container">

                <TextView
                    android:id="@+id/created_music_list"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/created_music_list_text_start_margin"
                    android:layout_marginTop="@dimen/created_music_list_top_margin"
                    android:hint="@string/created_music_list_hint"
                    android:textColor="@color/colorGray"
                    android:textSize="@dimen/created_music_list_text_size"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:id="@+id/btn_create_music_list"
                    android:layout_width="@dimen/btn_create_music_list_size"
                    android:layout_height="@dimen/btn_create_music_list_size"
                    android:layout_marginTop="@dimen/btn_create_music_list_top_margin"
                    android:layout_marginEnd="@dimen/btn_create_music_list_end_margin"
                    android:background="@drawable/btn_create_music_list_shape"
                    android:contentDescription="@string/created_music_list_desc"
                    android:scaleType="center"
                    android:src="@mipmap/ic_add"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/created_music_list_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/created_music_list_container_top_bottom_margin"
                    android:layout_marginBottom="@dimen/created_music_list_container_top_bottom_margin"
                    app:layout_constraintTop_toBottomOf="@+id/created_music_list" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>